--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@ pnpm-debug.log*
 lerna-debug.log*
 yarn.lock
 
-node_modules
-dist
-dist-ssr
+**/*node_modules
+**/*dist
+**/*dist-ssr
 *.local
 
 # Editor directories and files
